src/_atgrid.scss
//
// atGrid.css v4.0.0 - Attribute-based CSS Grid System
// https://github.com/kolcethompsonco/atgrid.css
// MIT License - James Kolce <james@kolcethompson.com>
// =============================================================================

[#{$prefix}container] {
  margin-left: auto;
  margin-right: auto;
  max-width: $container-width;
  padding-left: $gutter / 2;
  padding-right: $gutter / 2;
}

[#{$prefix}grid] {
  display: flex;
  margin-left: $gutter / -2;
  margin-right: $gutter / -2;
  flex-direction: column;

  // Collapse columns on breakpoint
  @media ($breakpoint) { flex-direction: row; }
}

[#{$prefix}column] { flex: 1; }

//
// Gutters by default
//

[#{$prefix}column] {
  padding-left: $gutter / 2;
  padding-right: $gutter / 2;
}

//
// No Gutters
//

[#{$prefix}grid~="ng"] {
  margin-left: 0;
  margin-right: 0;

  [#{$prefix}column] {
    padding-left: 0;
    padding-right: 0;
  }
}

//
// Alignment of all columns in a row
//

[#{$prefix}grid~="top"] { align-items: flex-start; }

[#{$prefix}grid~="center"] { align-items: center; }

[#{$prefix}grid~="bottom"] { align-items: flex-end; }

//
// Alignment of individual columns
//

[#{$prefix}column~="top"] { align-self: flex-start; }

[#{$prefix}column~="center"] { align-self: center; }

[#{$prefix}column~="bottom"] { align-self: flex-end; }

//
// Column widths
//

@for $i from 1 through $num-columns {
  [#{$prefix}column~="#{$i}"] {
    flex: 0 1 ($i/$num-columns) * 100%;
  }
}

//
// Column offsets
//

@media ($breakpoint) {
  @for $i from 1 through $num-columns {
    [#{$prefix}column~="+#{$i}"] {
      margin-left: ($i/$num-columns) * 100%;
    }
  }
}

